[package]
name = "todos"
version = "0.1.0"
authors = ["Pepe Becker <mail@pepebecker.com>"]
edition = "2018"
description = "Create and manage your todos using the command line"
repository = "https://github.com/pepebecker/todos-cli"
license = "MIT"

[dependencies]
clap = "2.32.0"
serde = "1.0.80"
serde_json = "1.0"
serde_derive = "1.0.80"
